// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it route ads item by id - GET /api/brand/:id 1`] = `
Object {
  "data": Object {
    "item": Object {
      "created_at": "2017-06-14T08:23:15.000Z",
      "id": 11,
      "link": "/something.png",
      "name": "pretty banner",
      "photo": "http://cdn.image./something.png",
      "updated_at": "2017-06-14T08:23:15.000Z",
    },
  },
  "message": "Elemento Ads encontrado",
  "status": 200,
}
`;

exports[`it route ads items - GET /api/brand 1`] = `
Object {
  "data": Object {
    "ads": Array [
      Object {
        "created_at": "2017-05-22T23:45:43.000Z",
        "id": 4,
        "link": "/ofertas",
        "name": "Ofertas",
        "photo": "https://res.cloudinary.com/riqra/image/upload/v1487711086/web/offers-banner.jpg",
        "updated_at": "2017-05-22T23:45:43.000Z",
      },
      Object {
        "created_at": "2017-06-13T21:46:50.000Z",
        "id": 6,
        "link": "http://cnd.image/awesome.png",
        "name": "Pretty banner",
        "photo": "awesome.png",
        "updated_at": "2017-06-13T21:46:50.000Z",
      },
      Object {
        "created_at": "2017-06-13T21:46:52.000Z",
        "id": 7,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-13T21:46:52.000Z",
      },
      Object {
        "created_at": "2017-06-13T22:09:22.000Z",
        "id": 9,
        "link": "http://cdn.image./something.png1",
        "name": "pretty banner1",
        "photo": "something.png1",
        "updated_at": "2017-06-13T22:09:22.000Z",
      },
      Object {
        "created_at": "2017-06-14T08:23:15.000Z",
        "id": 11,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T08:23:15.000Z",
      },
      Object {
        "created_at": "2017-06-14T16:24:51.000Z",
        "id": 12,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T16:24:51.000Z",
      },
      Object {
        "created_at": "2017-06-14T16:26:24.000Z",
        "id": 13,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T16:26:24.000Z",
      },
      Object {
        "created_at": "2017-06-14T16:27:03.000Z",
        "id": 15,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T16:27:03.000Z",
      },
      Object {
        "created_at": "2017-06-14T16:28:28.000Z",
        "id": 16,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T16:28:28.000Z",
      },
      Object {
        "created_at": "2017-06-14T16:29:42.000Z",
        "id": 17,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T16:29:42.000Z",
      },
      Object {
        "created_at": "2017-06-14T16:29:51.000Z",
        "id": 18,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T16:29:51.000Z",
      },
      Object {
        "created_at": "2017-06-14T17:06:12.000Z",
        "id": 20,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T17:06:12.000Z",
      },
      Object {
        "created_at": "2017-06-14T17:07:58.000Z",
        "id": 21,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T17:07:58.000Z",
      },
      Object {
        "created_at": "2017-06-14T17:08:14.000Z",
        "id": 22,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T17:08:14.000Z",
      },
      Object {
        "created_at": "2017-06-14T17:08:17.000Z",
        "id": 23,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T17:08:17.000Z",
      },
      Object {
        "created_at": "2017-06-14T17:31:10.000Z",
        "id": 24,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T17:31:10.000Z",
      },
      Object {
        "created_at": "2017-06-14T17:31:12.000Z",
        "id": 25,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T17:31:12.000Z",
      },
      Object {
        "created_at": "2017-06-14T17:42:10.000Z",
        "id": 26,
        "link": "http://cdn.image./something.png",
        "name": "pretty banner",
        "photo": "something.png",
        "updated_at": "2017-06-14T17:42:10.000Z",
      },
      Object {
        "created_at": "2017-06-14T19:46:44.000Z",
        "id": 27,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T19:46:44.000Z",
      },
      Object {
        "created_at": "2017-06-14T19:47:15.000Z",
        "id": 28,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T19:47:15.000Z",
      },
      Object {
        "created_at": "2017-06-14T19:55:30.000Z",
        "id": 29,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T19:55:30.000Z",
      },
      Object {
        "created_at": "2017-06-14T19:56:40.000Z",
        "id": 30,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T19:56:40.000Z",
      },
      Object {
        "created_at": "2017-06-14T19:57:02.000Z",
        "id": 31,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T19:57:02.000Z",
      },
      Object {
        "created_at": "2017-06-14T19:57:32.000Z",
        "id": 32,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T19:57:32.000Z",
      },
      Object {
        "created_at": "2017-06-14T19:59:57.000Z",
        "id": 33,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T19:59:57.000Z",
      },
      Object {
        "created_at": "2017-06-14T20:00:35.000Z",
        "id": 34,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T20:00:35.000Z",
      },
      Object {
        "created_at": "2017-06-14T20:01:07.000Z",
        "id": 35,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T20:01:07.000Z",
      },
      Object {
        "created_at": "2017-06-14T20:01:51.000Z",
        "id": 36,
        "link": "/something.png",
        "name": "pretty banner",
        "photo": "http://cdn.image./something.png",
        "updated_at": "2017-06-14T20:01:51.000Z",
      },
    ],
  },
  "message": "Producto actualizado en el carrito",
  "status": 200,
}
`;

exports[`it route create new ads item - POST /api/brand 1`] = `
Object {
  "data": Object {
    "item": Object {
      "created_at": "2017-06-14T20:01:51.000Z",
      "id": 36,
      "link": "/something.png",
      "name": "pretty banner",
      "photo": "http://cdn.image./something.png",
      "updated_at": "2017-06-14T20:01:51.000Z",
    },
  },
  "message": "Elemento Ads creado",
  "status": 200,
}
`;

exports[`it route delete ads item by id - DELETE /api/brand/:id 1`] = `
Object {
  "data": Object {},
  "message": "Elemento Ads eliminado",
  "status": 200,
}
`;

exports[`it route update ads item by id - PUT /api/brand/:id 1`] = `
Object {
  "data": Object {
    "id": Object {
      "created_at": "2017-06-14T08:23:15.000Z",
      "id": 11,
      "link": "/something.png",
      "name": "pretty banner",
      "photo": "http://cdn.image./something.png",
      "updated_at": "2017-06-14T08:23:15.000Z",
    },
  },
  "message": "Elemento Ads actualizado",
  "status": 200,
}
`;
